2006-08-31  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-operation.c: Operation reference fixes
    
2006-08-30  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-sharing.c:
    * libseahorse/seahorse-dns-sd.c: use pgpkey-hkp for DNS SD 
    SRV record. Patch from nafallo@magicalforest.se. Fixes #353595
    
2006-08-30  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-encrypted.desktop.in: Remove unused 
    application/pgp mime type
    * libseahorse/seahorse-util.c:
    * plugins/nautilus/seahorse.xml: Make SSH key mime type 
    application/x-ssh-key
    
2006-08-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-source.c: Fix uninitialized variable
    and comparing of paths that had extra slashes. Fixes #353306
    * libseahorse/seahorse-ssh-source.c: More fixes for building paths.
    
2006-08-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-operation.c: Cancel operation when 
    SSH password prompt is cancelled. 
    
2006-08-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-key.c: Fix crasher on amd64 with negative
    array indexes. Patch by Sebastian Dröge. Fixes #352808
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key-data.c: 
    * libseahorse/seahorse-ssh-key-data.h:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-source.c: 
    Also standardize internal SSH key ids on last 16 upper case 
    hex chars of fingerprint similar to PGP key ids.
    
2006-08-27  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-encrypted.desktop.in: Add application/pgp to the 
    list of mimetypes we handle. 
    
2006-08-27  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-secure-entry.c: Change the default 
    invisible char to a bullet. [Jose Carlos Garcia Sogo]
    
2006-08-26  Nate Nielsen  <nielsen@memberwebs.com>
