@@ -657,17 +657,8 @@ sign_activate (GtkWidget *widget, SeahorseWidget *swidget)
     GList *keys = NULL;
 
     skey = get_selected_key (swidget, &uid);
-    if (SEAHORSE_IS_PGP_KEY (skey)) {
+    if (SEAHORSE_IS_PGP_KEY (skey))
         seahorse_sign_show (SEAHORSE_PGP_KEY (skey), uid);
-        
-#ifdef WITH_KEYSERVER
-        if (seahorse_gconf_get_boolean(AUTOSYNC_KEY) == TRUE) {
-            keys = g_list_append (keys, skey);
-            seahorse_keyserver_sync (keys);
-            g_list_free(keys);
-        }
-#endif
-    }
 }
 
 static void
