@@ -1,5 +1,11 @@
 2006-08-31  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * src/seahorse-key-manager.c:
+    * src/seahorse-sign.c: Don't sync with server unless signing 
+    actually took place
+
+2006-08-31  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-context.c:
     * libseahorse/seahorse-operation.c: Operation reference fixes
     
